--- a/styles/modules/_theme-switch.css
+++ b/styles/modules/_theme-switch.css
@@ -1,16 +1,16 @@
 .theme-switch {
-  @apply flex my-4 border px-1 py-2 rounded-full;
+  @apply flex my-4;
 
-  &--button {
-    @apply clean-btn mx-1 p-0 bg-transparent w-5 h-5 rounded-full border;
-
-    &.is-current {
-      box-shadow: 0 0 0 8px hsla(var(--pageText-hsl), .15);
-    }
-
-    span {
-      @apply block w-full h-full rounded-full bg-current;
-      color: var(--swatch);
-    }
+  &--toggle {
+    @apply clean-btn flex items-center p-2 bg-transparent border rounded-full;
   }
+
+  &--label {
+    @apply mx-2 text-sm font-semibold;
+  }
+}
+
+.swatch {
+  @apply block w-4 h-4 rounded-full border;
+  background-color: var(--color);
 }
