--- a/styles/modules/_product.css
+++ b/styles/modules/_product.css
@@ -74,7 +74,7 @@
   }
 
   &--values {
-    @apply flex flex-wrap justify-end gap-2 ml-auto;
+    @apply flex flex-wrap justify-end gap-2 gap-y-2 gap-x-2 ml-auto;
     grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
   }
 
