--- a/styles/base/_typography.css
+++ b/styles/base/_typography.css
@@ -26,28 +26,32 @@
   }
 
   /* Headlines */
-  h1 {
-    @apply m-0 mb-2 text-5xl font-normal leading-tight;
+  h1,
+  .is-h1 {
+    @apply m-0 text-5xl font-normal leading-tight;
   }
 
-  h2 {
-    @apply m-0 mb-2 text-4xl font-normal leading-tight;
+  h2,
+  .is-h2 {
+    @apply m-0 text-4xl font-normal leading-tight;
   }
 
-  h3 {
-    @apply m-0 mb-2 text-3xl font-normal leading-tight;
+  h3,
+  .is-h3 {
+    @apply m-0 text-3xl font-normal leading-tight;
   }
 
-  h4 {
-    @apply m-0 mb-2 text-2xl font-normal leading-tight;
+  h4,
+  .is-h4 {
+    @apply m-0 text-2xl font-normal leading-tight;
   }
 
   h5 {
-    @apply m-0 mb-2 text-xl font-normal leading-tight;
+    @apply m-0 text-xl font-normal leading-tight;
   }
 
   h6 {
-    @apply m-0 mb-2 text-xs font-normal leading-tight;
+    @apply m-0 text-xs font-normal leading-tight;
   }
 
   /* Links */
@@ -79,6 +83,14 @@
   }
 }
 
+.text-start {
+  text-align: start;
+}
+
+.text-end {
+  text-align: end;
+}
+
 /* Focus Adjust */
 a,
 button,
@@ -106,12 +118,6 @@ p {
   }
 }
 
-hr {
-  &:last-child {
-    @apply mb-0;
-  }
-}
-
 ul {
   .rc & {
     @apply pl-8 text-base leading-normal;
@@ -128,5 +134,63 @@ ul {
         @apply inline-block relative -ml-4 w-4;
       }
     }
+  }
+}
+
+h1,
+.is-h1 {
+  &:not(:last-child) {
+    @apply mb-4;
+  }
+
+  &.has-btn {
+    @apply flex flex-col items-start sm:flex-row sm:items-center;
+
+    .btn {
+      @apply mt-4 sm:mt-0 sm:ml-4;
+    }
+  }
+}
+
+h2,
+.is-h2 {
+  &:not(:last-child) {
+    @apply mb-2;
+  }
+}
+
+h3,
+.is-h3 {
+  &:not(:last-child) {
+    @apply mb-1;
+  }
+}
+
+h4,
+.is-h4 {
+  &:not(:last-child) {
+    @apply mb-1;
+  }
+}
+
+a {
+  .rc & {
+    &:not(.btn) {
+      @apply underline opacity-60 hover:opacity-100 transition-opacity duration-200;
+    }
+  }
+}
+
+figure {
+  .rc & {
+    &:not(:last-child) {
+      @apply mb-6;
+    }
+  }
+}
+
+hr {
+  &:last-child {
+    @apply mb-0;
   }
 }
