--- a/styles/modules/_cart.css
+++ b/styles/modules/_cart.css
@@ -15,10 +15,11 @@
 
   &--backdrop {
     @apply fixed inset-0 z-80 bg-black bg-opacity-40 pointer-events-none opacity-0;
-    transition: opacity .4s linear;
+    transition: opacity .15s linear;
 
     &.is-active {
       @apply pointer-events-auto opacity-100;
+      backdrop-filter: blur(6px);
     }
   }
 
