--- a/styles/modules/_header.css
+++ b/styles/modules/_header.css
@@ -204,10 +204,11 @@ a[href="#content"].skip-link {
 
       &--backdrop {
         @apply fixed inset-0 z-40 bg-black bg-opacity-40 pointer-events-none opacity-0;
-        transition: opacity .4s linear;
+        transition: opacity .15s linear;
 
         &.is-active {
           @apply pointer-events-auto opacity-100;
+          backdrop-filter: blur(6px);
         }
       }
 
