--- a/styles/base/_media.css
+++ b/styles/base/_media.css
@@ -37,3 +37,11 @@
     }
   }
 }
+
+.video-loop {
+  @apply absolute inset-0 bg-black;
+  
+  iframe {
+    @apply absolute top-1/2 left-1/2 transform-gpu -translate-x-1/2 -translate-y-1/2 w-screen min-h-screen;
+  }
+}
