--- a/styles/modules/_header.css
+++ b/styles/modules/_header.css
@@ -250,6 +250,10 @@ a[href="#content"].skip-link {
           @apply text-xl leading-normal;
         }
       }
+
+      &--featured {
+        @apply flex;
+      }
     }
   }
 
