--- a/styles/modules/_footer.css
+++ b/styles/modules/_footer.css
@@ -10,11 +10,11 @@
   }
 
   .form {
-    @apply mt-4;
+    @apply mt-auto;
   }
 
   .menu-footer {
-    @apply flex flex-col lg:mt-4 lg:mb-8;
+    @apply flex flex-col lg:mb-8;
 
     a {
       @apply block py-2 hover:opacity-30 transition-opacity duration-200;
@@ -22,7 +22,7 @@
   }
 
   .menu-social {
-    @apply inline-flex flex-wrap my-4 mx-auto lg:mx-0;
+    @apply inline-flex flex-wrap my-4 mx-auto lg:mt-0 lg:mx-0;
 
     a {
       @apply block w-8 h-8 hover:opacity-30 transition-opacity duration-200;
