--- a/styles/modules/_footer.css
+++ b/styles/modules/_footer.css
@@ -17,7 +17,7 @@
     @apply flex flex-col lg:mb-8;
 
     a {
-      @apply block py-2 hover:opacity-30 transition-opacity duration-200;
+      @apply inline-block py-2 hover:opacity-40;
     }
   }
 
@@ -25,7 +25,7 @@
     @apply inline-flex flex-wrap my-4 mx-auto lg:mt-0 lg:mx-0;
 
     a {
-      @apply block w-8 h-8 hover:opacity-30 transition-opacity duration-200;
+      @apply block w-8 h-8 hover:opacity-40;
 
       svg {
         @apply block w-full h-full;
