--- a/styles/base/_typography.css
+++ b/styles/base/_typography.css
@@ -1,5 +1,5 @@
 @layer base {
-  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+  /* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap'); */
 
   html,
   body {
