--- a/styles/app.css
+++ b/styles/app.css
@@ -25,6 +25,7 @@
 @import "modules/_cart";
 
 @import "modules/_hero";
+@import "modules/_divider";
 @import "modules/_collection";
 @import "modules/_product";
 @import "modules/_theme-switch";
