restructure studio and new sort/filtering feature

--- a/styles/app.css
+++ b/styles/app.css
@@ -15,6 +15,7 @@
 @import "components/_cursors";
 @import "components/_drawers";
 @import "components/_dropdowns";
+@import "components/_filters";
 @import "components/_marquees";
 @import "components/_cookie-bar";
 @import "components/_promo-banner";
