--- a/styles/base/_forms.css
+++ b/styles/base/_forms.css
@@ -61,7 +61,7 @@
   }
 
   &--label {
-    @apply absolute top-1/2 transform -translate-y-1/2 left-0 px-4 py-2;
+    @apply absolute top-1/2 -translate-y-1/2 left-0 px-4 py-2;
 
     .is-filled & {
       @apply hidden;
@@ -109,7 +109,7 @@
   }
 
   &--error {
-    @apply absolute bottom-full left-1/2 transform -translate-x-1/2 translate-y-1/2 px-2 rounded-full bg-pageText text-pageBG text-xs leading-normal font-semibold;
+    @apply absolute bottom-full left-1/2 -translate-x-1/2 translate-y-1/2 px-2 rounded-full bg-pageText text-pageBG text-xs leading-normal font-semibold;
   }
 
   &--pot {
