--- a/styles/components/_accordions.css
+++ b/styles/components/_accordions.css
@@ -13,11 +13,11 @@
 
   &--icon {
     @apply flex-shrink-0 block relative ml-8 w-3 h-3;
-    transition: transform .3s cubic-bezier(0.22, 1, 0.36, 1);
+    transition: .3s cubic-bezier(0.22, 1, 0.36, 1);
 
     &::before,
     &::after {
-      @apply block absolute top-1/2 transform -translate-y-1/2 inset-x-0 bg-current w-full h-px;
+      @apply block absolute top-1/2 -translate-y-1/2 inset-x-0 bg-current w-full h-px;
       content: "";
     }
 
@@ -26,7 +26,7 @@
     }
 
     .is-open & {
-      @apply transform rotate-45;
+      @apply rotate-45;
     }
   }
 
