--- a/styles/components/_carousels.css
+++ b/styles/components/_carousels.css
@@ -33,7 +33,7 @@
   }
 
   &--hud {
-    @apply flex justify-center absolute bottom-0 inset-x-0 transform translate-y-1/2 pointer-events-none;
+    @apply flex justify-center absolute bottom-0 inset-x-0 translate-y-1/2 pointer-events-none;
   }
 
   &--nav {
@@ -54,7 +54,8 @@
   }
 
   &--prev {
-    transform: scaleX(-1);
+    @apply scale-x-[-1];
+    /* transform: scaleX(-1); */
   }
 
   &--status {
@@ -69,7 +70,7 @@
     }
 
     &::after {
-      @apply absolute left-1/2 transform -translate-x-1/2 inset-y-3 w-px bg-pageBG opacity-30;
+      @apply absolute left-1/2 -translate-x-1/2 inset-y-3 w-px bg-pageBG opacity-30;
       content: "";
     }
   }
@@ -121,8 +122,7 @@
       &.is-active {
         /* active state styles */
         &::before {
-          @apply opacity-100;
-          transform: scale(1.5);
+          @apply opacity-100 scale-150;
         }
       }
     }
