--- a/styles/components/_dropdowns.css
+++ b/styles/components/_dropdowns.css
@@ -4,7 +4,7 @@
   &.is-open {
     @apply sm:z-30;
     
-    @screen sm {
+    @media screen(sm) {
       .dropdown--content {
         @apply opacity-100 visible pointer-events-auto;
       }
@@ -23,7 +23,7 @@
     @apply relative h-0 overflow-y-hidden;
     @apply sm:absolute sm:top-full sm:whitespace-nowrap sm:overflow-y-visible sm:opacity-0 sm:invisible sm:pointer-events-none sm:transition-all;
 
-    @screen sm {
+    @media screen(sm) {
       height: auto !important; /* override mobile accordion styles */
     }
   }
