--- a/styles/components/_mega-nav.css
+++ b/styles/components/_mega-nav.css
@@ -51,9 +51,7 @@
 /* (you should mostly offload these to the general header links/button styles) */
 .mega-toggle {
   &--icon {
-    @apply inline-block mr-2 rounded-full border;
-    width: 10px;
-    height: 10px;
+    @apply inline-block mr-2 rounded-full border w-[10px] h-[10px];
 
     .is-open & {
       @apply bg-pageText;
@@ -90,7 +88,7 @@
       @apply block absolute top-0 right-full w-2 text-xs uppercase tracking-widest font-semibold;
       
       span {
-        @apply block overflow-hidden absolute top-1/2 left-0 whitespace-nowrap transform rotate-90;
+        @apply block overflow-hidden absolute top-1/2 left-0 whitespace-nowrap rotate-90;
         transform-origin: 0 0;
       }
     }
