--- a/styles/components/_drawers.css
+++ b/styles/components/_drawers.css
@@ -1,27 +1,45 @@
 .drawer {
-  @apply fixed top-0 right-0 bottom-0 w-full max-w-2xl z-90 bg-pageText text-pageBG;
+  @apply fixed top-0 w-full h-screen max-w-3xl z-90 bg-pageText text-pageBG invisible pointer-events-none;
+  height: calc(var(--vh, 1vh) * 100);
+  will-change: transform;
+  transition: visibility .2s .8s;
+
+  &.is-left {
+    @apply left-0;
+
+    @media (min-width: 769px) {
+      @apply border-r;
+    }
+  }
+
+  &.is-right {
+    @apply right-0;
+
+    @media (min-width: 769px) {
+      @apply border-l;
+    }
+  }
+
+  &.is-active {
+    @apply visible pointer-events-auto;
+    transition-delay: 0s;
+  }
+
+  &.is-updating {
+    @apply cursor-wait !important;
+  }
 
   &--backdrop {
-    @apply block fixed inset-0 bg-black bg-opacity-80 z-80;
+    @apply fixed inset-0 z-80 bg-black bg-opacity-40 pointer-events-none opacity-0;
+    transition: opacity .15s linear;
+
+    &.is-active {
+      @apply pointer-events-auto opacity-100;
+      backdrop-filter: blur(6px);
+    }
   }
 
   &--inner {
-    @apply flex flex-col relative h-full;
-  }
-
-  &--header {
-    @apply flex items-center relative p-4;
-  }
-
-  &--close {
-    /* Custom Close Button styles */
-  }
-
-  &--title {
-    @apply mr-auto;
-  }
-
-  &--content {
-    @apply flex-1 overflow-y-scroll p-4;
+    @apply flex flex-col relative h-full w-full;
   }
 }
