--- a/styles/modules/_filters.css
+++ b/styles/modules/_filters.css
@@ -18,6 +18,10 @@
     @apply opacity-30 ml-2;
   }
 
+  &--actions {
+    @apply flex items-center;
+  }
+
   &--content {
     @apply flex-1 flex flex-col overflow-y-scroll p-4 sm:px-8 sm:py-2;
   }
@@ -25,6 +29,10 @@
   &--footer {
     @apply relative px-4 pb-4 sm:px-8 sm:pb-8;
   }
+}
+
+.filters-close {
+  @apply clean-btn bg-transparent -mr-2 mx-2 p-2 text-sm leading-normal font-semibold uppercase;
 }
 
 .filter-group {
